added buttons to UI and made buttons change playerChoice and call playRound function

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <title>Rock Paper Scissors!</title>
     <meta charset="UTF-8">
-    <script src="./javascript.js"></script>
+    <script src="./javascript.js" defer></script>
   </head>
   <body>
+
+    <div>
+      <button id="1">Rock</button>
+      <button id="2">Paper</button>
+      <button id="3">Scissors</button>
+    </div>
     <script>
 
     </script>
