added score to display and have it updated each time a round is played

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
       <button id="2">Paper</button>
       <button id="3">Scissors</button>
     </div>
+
+    <div id="score">
+      <p>Player Score: </p>
+      <p id="playerScore"></p>
+      <p>Computer Score:</p>
+      <p id="computerScore"></p>
+      <p> Tied Rounds</p>
+      <p id="ties"></p>
+    </div>
     <script>
 
     </script>
