--- a/index.html
+++ b/index.html
@@ -4,25 +4,29 @@
     <title>Rock Paper Scissors!</title>
     <meta charset="UTF-8">
     <script src="./javascript.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
 
-    <div>
-      <button id="1">Rock</button>
-      <button id="2">Paper</button>
-      <button id="3">Scissors</button>
+    <div class="container">
+      <div class="weaponContainer">
+        <button id="1">Rock</button>
+        <button id="2">Paper</button>
+        <button id="3">Scissors</button>
+      </div>
+
+      <div class="score">
+        <p>Player Score: </p>
+        <p id="playerScore"></p>
+        <p>Computer Score:</p>
+        <p id="computerScore"></p>
+        <p> Tied Rounds</p>
+        <p id="ties"></p>
+      </div>
+
+      <div id="announcer"></div>
     </div>
 
-    <div id="score">
-      <p>Player Score: </p>
-      <p id="playerScore"></p>
-      <p>Computer Score:</p>
-      <p id="computerScore"></p>
-      <p> Tied Rounds</p>
-      <p id="ties"></p>
-    </div>
-
-    <div id="announcer"></div>
     <script>
 
     </script>
