added images to replace buttons

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <div class="header">Are you ready to play ROCK PAPER SCISSORS?!</div>
 
     <div class="container">
       <div class="weaponContainer">
-        <button id="1">Rock</button>
-        <button id="2">Paper</button>
-        <button id="3">Scissors</button>
+        <button id="1" class="gameButton"><img src="./img/rock.jpg" alt="ROCK" width="100px"></button>
+        <button id="2" class="gameButton"><img src="./img/paper.jpg" alt="PAPER" width="100px"></button>
+        <button id="3" class="gameButton"><img src="./img/scissors.jpg" alt="SCISSORS" width="100px"></button>
       </div>
 
       <div class="score">
