fixed a typo in the subheader

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="header">Are you ready to play ROCK PAPER SCISSORS?!
-      <p class="subheader"> Choose your weapon and play a best of three game</p>
+      <p class="subheader"> Choose your weapon and play a best of five rounds game</p>
     </div>
     
     <div class="large-container">
